2013-09-05  Roland Levillain  <roland@lrde.epita.fr>

	Remove an unnecessary #include from an example of the tutorial.

	* doc/examples/tuto3/first_routine.cc: Here.
	* doc/examples/split/tuto3_first_routine-1.cc.raw: Regen.

2013-09-02  Roland Levillain  <roland@lrde.epita.fr>

	Add parentheses around complex operands of operator `|'.

	* apps/mesh-segm-skel/mesh-complex-max-curv-1-collapse.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-2-collapse.cc:
	Here, as suggested by g++ 4.7.

2013-09-02  Roland Levillain  <roland@lrde.epita.fr>

	Do not run test-mixed in Milena apps with the `check' target.

	* apps/generic-skel/test-mixed.in,
	* apps/mesh-segm-skel/test-mixed.in:
	Add a `-wadgmm-2010' suffix to saved images to distinguish them
	from outputs of other tests.
	* apps/generic-skel/Makefile.am,
	* apps/mesh-segm-skel/Makefile.am
	(MOSTLYCLEANFILES): Adjust.
	Add files generated by disabled test cases.
	(generated_checked_tests): New.
	Contain all generated checked tests.
	(generated_tests): Set it to contain all test (checked
	automatically and run manually).
	(TESTS): Set it to $(generated_checked_tests).
	Aesthetic changes.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Aesthetic changes in Milena apps Makefiles.

	* apps/generic-skel/Makefile.am,
	* apps/mesh-segm-skel/Makefile.am:
	Here.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Factor the generation of tests in Milena's apps/mesh-segm-skel.

	* apps/mesh-segm-skel/Makefile.am: Here.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Distribute sources of generated tests in Milena apps.

	* apps/generic-skel/Makefile.am (EXTRA_DIST): Add test-mixed.in.
	* apps/mesh-segm-skel/Makefile.am (EXTRA_DIST): Add
	test-mesh-complex-2-collapse.in,
	test-mesh-complex-max-curv-2-collapse.in,
	test-mesh-complex-max-curv-1-collapse.in and
	test-mixed.in.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Do not install Milena apps.

	* apps/generic-skel/Makefile.am,