@@ -1,4 +1,4 @@
-# Copyright (C) 2007, 2008, 2009, 2012 EPITA Research and Development
+# Copyright (C) 2007, 2008, 2009, 2012, 2013 EPITA Research and Development
 # Laboratory (LRDE).
 #
 # This file is part of Olena.
@@ -76,8 +76,28 @@ $(srcdir)/headers.mk: $(top_srcdir)/build-aux/generate_dist_headers.sh
 
 include $(srcdir)/headers.mk
 
-# Generated by configure from mln/version.hh.in.
-nobase_nodist_include_HEADERS = mln/version.hh
+
+# Package metadata (mln/version.hh).
+#
+# Note that contrary to $(top_srcdir)/config.h, mln/version.hh is
+# meant to be installed and is part of the library.
+
+edit = sed -e 's,@PACKAGE_BUGREPORT[@],$(PACKAGE_BUGREPORT),g'	\
+           -e 's,@PACKAGE_NAME[@],$(PACKAGE_NAME),g'		\
+           -e 's,@PACKAGE_STRING[@],$(PACKAGE_STRING),g'	\
+           -e 's,@PACKAGE_VERSION[@],$(PACKAGE_VERSION),g'	\
+           -e 's,@PACKAGE_URL[@],$(PACKAGE_URL),g'		\
+           -e 's,@PACKAGE_AUTHORS[@],$(PACKAGE_AUTHORS),g'
+
+EXTRA_DIST = mln/version.hh.in
+$(srcdir)/mln/version.hh: mln/version.hh.in $(top_srcdir)/configure.ac Makefile.am
+	rm -f $@ $@.tmp
+	srcdir=''; \
+	  test -f ./$@.in || srcdir=$(srcdir)/; \
+	  $(edit) $${srcdir}$@.in >$@.tmp
+	chmod a-w $@.tmp
+	mv $@.tmp $@
+
 
 imgdir = $(pkgdatadir)/images
 dist_img_DATA =					\
@@ -107,7 +127,7 @@ dist_img_DATA =					\
   img/tiny.ppm					\
   img/toto.pbm
 
-EXTRA_DIST =					\
+EXTRA_DIST +=					\
   tests/img/test_rgb8.tif			\
   tests/img/test_bw.tif				\
   tests/img/test_gl.tif
