@@ -1298,6 +1298,7 @@ mln/value/sign.hh \
 mln/value/super_value.hh \
 mln/value/value_array.hh \
 mln/value/viter.hh \
+mln/version.hh \
 mln/win/all.hh \
 mln/win/backdiag2d.hh \
 mln/win/ball.hh \
