@@ -1,0 +1,41 @@
+// Copyright (C) 2009, 2011 EPITA Research and Development Laboratory (LRDE)
+//
+// This file is part of Olena.
+//
+// Olena is free software: you can redistribute it and/or modify it under
+// the terms of the GNU General Public License as published by the Free
+// Software Foundation, version 2 of the License.
+//
+// Olena is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+// General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with Olena.  If not, see <http://www.gnu.org/licenses/>.
+
+/// \file
+/// \brief Package metadata (name, version, etc.)
+
+#ifndef MLN_VERSION_HH
+# define MLN_VERSION_HH
+
+/// The address where bug reports should be sent.
+#define OLN_PACKAGE_BUGREPORT "olena@lrde.epita.fr"
+
+/// The full name of this package.
+#define OLN_PACKAGE_NAME "Olena"
+
+// The full name and version of this package.
+#define OLN_PACKAGE_STRING "Olena 2.0a"
+
+/// The version of this package.
+#define OLN_PACKAGE_VERSION "2.0a"
+
+/// Home page for this package.
+#define OLN_PACKAGE_URL "http://olena.lrde.epita.fr"
+
+/// Authors of the package.
+#define OLN_PACKAGE_AUTHORS "EPITA Research and Development Laboratory (LRDE)"
+
+#endif // ! MLN_VERSION_HH
